--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,36 +6,68 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/enable_button"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/button_list"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="enableBluetooth"
-        android:text="@string/enable"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:orientation="vertical">
+        <Button
+            android:id="@+id/enable_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="enableBluetooth"
+            android:text="@string/enable"
+            app:layout_constraintTop_toTopOf="parent"/>
 
-    <Button
-        android:id="@+id/discover_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="discoverBtDevices"
-        android:text="@string/discover"
-        app:layout_constraintTop_toBottomOf="@id/enable_button"/>
+        <Button
+            android:id="@+id/discover_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="discoverBtDevices"
+            android:text="@string/discover"
+            app:layout_constraintTop_toBottomOf="@id/enable_button"/>
 
-    <Button
-        android:id="@+id/paired_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="getPairedDevices"
-        android:text="@string/paired_devices"
-        app:layout_constraintTop_toBottomOf="@id/discover_button"/>
+        <Button
+            android:id="@+id/paired_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="getPairedDevices"
+            android:text="@string/paired_devices"
+            app:layout_constraintTop_toBottomOf="@id/discover_button"/>
 
-    <Button
-        android:id="@+id/connect_button"
-        android:layout_width="match_parent"
+        <Button
+            android:id="@+id/connect_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="connectToDevice"
+            android:text="@string/connect"
+            app:layout_constraintTop_toBottomOf="@id/paired_button"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/voice_list"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="connectToDevice"
-        android:text="@string/connect"
-        app:layout_constraintTop_toBottomOf="@id/paired_button"/>
+        app:layout_constraintLeft_toRightOf="@id/button_list">
+        <Button
+            android:id="@+id/record_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/record"
+            android:onClick="recordVoice"/>
+    </LinearLayout>
+    <TextView
+        android:id="@+id/selected_device"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/button_list"
+        android:text="Selected Device: "
+        android:textSize="36sp">
+    </TextView>
+    <TextView
+        android:id="@+id/selected_device_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/selected_device"
+        android:textSize="36sp"/>
 
 </android.support.constraint.ConstraintLayout>
